--- a/webgit/index.html
+++ b/webgit/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="#">NEW</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#">Pankaj</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
